--- a/showcase/templates/showcase/home.html
+++ b/showcase/templates/showcase/home.html
@@ -15,14 +15,14 @@
   <!-- Role -->
   <p class="hero-tagline">
     {% for word in role_words %}
-      <span class="animated-word" style="animation-delay: {{ forloop.counter0|floatformat:1 }}s">{{ word }}</span>
+      <span class="animated-word" style="animation-delay: {{ forloop.counter0|add:10|floatformat:1 }}s">{{ word }}</span>
     {% endfor %}
   </p>
 
   <!-- Tagline -->
   <p class="hero-mission">
     {% for word in tagline_words %}
-      <span class="animated-word" style="animation-delay: {{ forloop.counter0|floatformat:1 }}s">{{ word }}</span>
+      <span class="animated-word" style="animation-delay: {{ forloop.counter0|add:20|floatformat:1 }}s">{{ word }}</span>
     {% endfor %}
   </p>
 
