--- a/showcase/templates/showcase/home.html
+++ b/showcase/templates/showcase/home.html
@@ -1,6 +1,7 @@
 {% extends 'showcase/base.html' %}
 {% block title %}Joseph Ombati — Data Scientist{% endblock %}
 {% block content %}
+{% load math_filters %}
 <div class="section text-center mt-5">
   <!-- Glowing 3D Gradient Title -->
   <h1 class="glow-textured-title">DATA SCIENTIST</h1>
