--- a/showcase/templates/showcase/projects.html
+++ b/showcase/templates/showcase/projects.html
@@ -1,6 +1,7 @@
 {% extends 'showcase/base.html' %}
 {% block title %}Projects — Joseph Ombati{% endblock %}
 {% block content %}
+{% load math_filters %}
 <div class="section text-center mt-5">
   <!-- Project 1 -->
   <h2 class="hero-name">
