--- a/showcase/templates/showcase/base.html
+++ b/showcase/templates/showcase/base.html
@@ -8,6 +8,34 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <meta name="google-site-verification" content="eXkkcWi13muz0gwSR4NxgkFjiCKnyaUtaEILbCfniPg" />
+  <title>Joseph Ombati | Data Scientist at The University of Nairobi</title>
+<meta name="description" content="Joseph Ombati is a first-year Data Science student at The University of Nairobi, based in Nairobi City, Kenya. He applies data science to solve real-world problems through modular Python workflows, ethical automation, and cinematic web platforms designed for global accessibility.">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Joseph Ombati",
+  "url": "https://www.josephombati.tech",
+  "jobTitle": "Data Scientist",
+  "affiliation": {
+    "@type": "CollegeOrUniversity",
+    "name": "The University of Nairobi"
+  },
+"description": "Joseph Ombati is a first-year Data Science student at The University of Nairobi, based in Nairobi City, Kenya. He applies data science to solve real-world problems through modular Python workflows, ethical automation, and cinematic web platforms designed for global accessibility.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Nairobi CBD",
+    "addressLocality": "Nairobi City",
+    "postalCode": "00100",
+    "addressCountry": "Kenya"
+  },
+  "sameAs": [
+    "https://github.com/Josephy1714",
+    "https://www.linkedin.com/in/joseph-ombati-623aa8381"
+  ]
+}
+</script>
+
 
   <style>
     body {
